fix demo dashboard overflow

--- a/src/components/landing-page-components/demo-dashboard/demo-dashboard.module.css
+++ b/src/components/landing-page-components/demo-dashboard/demo-dashboard.module.css
@@ -3,17 +3,21 @@
   border: 1px solid var(--section-outline);
   border-radius: var(--border-radius-md);
   overflow: hidden;
+  height: 80vh;
 }
 
 .layout {
   display: flex;
   flex-direction: row;
   position: relative;
+  overflow: hidden;
+  height: 100%;
 }
 
 .pageWrapper {
   width: 100%;
   padding-block: var(--space-lg);
+  overflow-y: auto;
 }
 
 .container {
@@ -25,6 +29,10 @@
 }
 
 @media (min-width: 768px) {
+  .dashboard {
+    height: 60rem;
+  }
+
   .wrapper {
     padding-block: calc(var(--space-lg) * 2);
   }
